--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@react-hook/window-size": "^3.0.7",
     "@reduxjs/toolkit": "^1.6.2",
     "@szhsin/react-menu": "3.5.2",
+    "file-saver": "^2.0.5",
     "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
     "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#f710852",
