--- a/ebpf/bpf/Makefile
+++ b/ebpf/bpf/Makefile
@@ -21,3 +21,12 @@ get-vmlinux-header:
 .PHONY: clean
 clean:
 	rm -rf libbpf/*.h vmlinux/*.h
+
+.PHONY: pyperf.so
+pyperf.so:
+	clang -DBPF_NO_PRESERVE_ACCESS_INDEX -DPYROSCOPE_UME \
+ 		-O0 -g3 -Wall -fpie -fPIC -nostdinc -std=gnu11 \
+ 		-shared \
+ 		-Wno-unused-variable -Wno-unused-function \
+ 		-I./libbpf -I./vmlinux/ \
+ 		-o pyperf.so  pyperf.bpf.c
