--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@szhsin/react-menu": "3.5.2",
     "@types/file-saver": "^2.0.5",
     "compression-streams-polyfill": "^0.1.4",
+    "css-loader": "^4.0.0",
     "file-saver": "^2.0.5",
     "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
