--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "5.3.0",
     "react-textarea-autosize": "8.3.0",
+    "sass-loader": "^9.0.2",
     "zod": "^3.21.4"
   },
   "workspaces": [
