--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,4 @@
-project_name: phlare # TODO: Change when we change the image repository
+project_name: pyroscope
 before:
   hooks:
     # This hook ensures that goreleaser uses the correct go version for a Phlare release
@@ -176,10 +176,10 @@ release:
 
     ## Docker Images
 
-    - [grafana/phlare](https://hub.docker.com/r/grafana/phlare/tags)
+    - [grafana/pyroscope](https://hub.docker.com/r/grafana/pyroscope/tags)
 
     ```bash
-      docker pull docker.io/grafana/phlare:{{ trimprefix .Tag "v" }}
+      docker pull docker.io/grafana/pyroscope:{{ trimprefix .Tag "v" }}
     ```
 
   ids:
