--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
           git config --global url."https://x-access-token:$(echo "${HOMEBREW_GITHUB_TOKEN}" | xargs)@github.com/pyroscope-io/homebrew-brew".insteadOf "https://github.com/pyroscope-io/homebrew-brew"
           git clone https://github.com/pyroscope-io/homebrew-brew ../homebrew-brew
           cd ../homebrew-brew
-          make generate-formulas && git add Formula && git commit -m "chore: update formulas to ${}" && git push origin main
+          make generate-formulas && git add Formula && git commit -m "chore: update formulas" && git push origin main
         env:
           HOMEBREW_GITHUB_TOKEN: ${{ steps.brew-token.outputs.token }}
           GITHUB_TOKEN: ${{ steps.app-goreleaser.outputs.token }}
